OldArchive/abb7b5b3230ceadc5d6bedd9111dc814-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp:38:93: error: default argument given for parameter 3 of 'bool Sphere::intersect(const Vec&, Vec&, float*, float*)' [-fpermissive]
 bool Sphere::intersect(const Vec &ray_orig, Vec &ray_dir, float *t0 = NULL, float *t1 = NULL) {return true;}
                                                                                             ^
main.cpp:28:10: error: after previous specification in 'virtual bool Sphere::intersect(const Vec&, Vec&, float*, float*)' [-fpermissive]
     bool intersect(const Vec &ray_orig, Vec &ray_dir, float *t0 = NULL, float *t1 = NULL);
          ^
main.cpp:38:93: error: default argument given for parameter 4 of 'bool Sphere::intersect(const Vec&, Vec&, float*, float*)' [-fpermissive]
 bool Sphere::intersect(const Vec &ray_orig, Vec &ray_dir, float *t0 = NULL, float *t1 = NULL) {return true;}
                                                                                             ^
main.cpp:28:10: error: after previous specification in 'virtual bool Sphere::intersect(const Vec&, Vec&, float*, float*)' [-fpermissive]
     bool intersect(const Vec &ray_orig, Vec &ray_dir, float *t0 = NULL, float *t1 = NULL);
          ^
